--- a/src/components/layout/Navbar.astro
+++ b/src/components/layout/Navbar.astro
@@ -26,7 +26,7 @@ const isActive = (href: string) => {
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" />
         </svg>
       </div>
-      <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52">
+      <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-1 p-2 shadow bg-base-100 rounded-box w-52">
         {navItems.map((item) => (
           <li>
             <a
